2012-03-21
KEGGprofile 0.0.7: Finish the vignette file

2012-03-20
KEGGprofile 0.0.6: Improvement in help file and example source

2012-03-08
KEGGprofile 0.0.5: Add return value for plot_pathway function; Release to my colleague

2012-03-04
KEGGprofile 0.0.4: Finish help files and example source

2012-03-03
KEGGprofile 0.0.3: Add example data files

2012-02-29
KEGGprofile 0.0.2: Improvement in figure details

2012-02-26
KEGGprofile 0.0.1: Build 'KEGGprofile' package by CMD Install and CMD check