@@ -1,19 +1,26 @@
 Package: KEGGprofile
 Type: Package
-Title: KEGGprofile: an annotation and visualization package for
-        multi-types and multi-groups expression data in KEGG pathway R
-        and Bioconductor
-Version: 0.1.2
-Date: 2012-3-21
+Title: An annotation and visualization package for multi-types and
+    multi-groups expression data in KEGG pathway
+Version: 0.99.1
+Date: 2012-6-29
 Author: Shilin Zhao
 Maintainer: Shilin Zhao <slzhao@sibs.ac.cn>
-Description: KEGGprofile is package that maps gene expression profile data to
-    KEGG pathway. The multi-types and multi-groups expression data can be
-    visualized in one pathway map.
+Description: KEGGprofile is an annotation and visualization tool which
+    integrated the expression profiles and the function annotation in KEGG
+    pathway maps. The multi-types and multi-groups expression data can be
+    visualized in one pathway map. KEGGprofile facilitated more detailed
+    analysis about the specific function changes inner pathway or temporal
+    correlations in different genes and samples.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: XML, png, TeachingDemos, KEGG.db
-Imports: AnnotationDbi
+Depends:
+    XML,
+    png,
+    TeachingDemos,
+    KEGG.db
+Imports:
+    AnnotationDbi
 biocViews: Pathways
-Collate: 'KEGG_function.R'
-Packaged: 2012-05-26 07:44:57 UTC; Administrator
+Collate:
+    'KEGG_function.R'
