@@ -1,5 +1,5 @@
 ###############################################################################
-# Data: 2012-02-26
+# Data: 2012-06-26
 # Author: Shilin Zhao (slzhao@sibs.ac.cn)
 ###############################################################################
 
@@ -111,17 +111,18 @@ parse_XMLfile<-function(pathway_id,specis,database_dir=getwd()) {
 ##' @param border_col border color for gene rectangles in the pathway map. A color matrix generated by function \code{\link{col_by_value}} can be used here
 ##' @param text_cex cex for text in the pathway map. A color matrix generated by function \code{\link{col_by_value}} can be used here
 ##' @param magnify the coefficient used to magnify the gene rectangles
-##' @param type the type of pathway map visulization, could be 'bg' or 'lines'. Default is 'bg'. See also 'Details'.
+##' @param type the type of pathway map visulization, could be 'bg' or 'lines'. Default is 'bg'. See also 'Details'
 ##' @param pathway_min The pathways with number of annotated genes less than pathway_min would be ignored
-##' @param genes_kept methods used for choosing genes when several genes corresponding to one location in pathway map. Default is 'foldchange', which kept the gene with largest fold changes. 'first' kept the first gene. 'random' chosed gene random. 'var' kept the gene with largest variation. 'abs' kept the gene with largest absolute value.
+##' @param genes_kept methods used for choosing genes when several genes corresponding to one location in pathway map. Default is 'foldchange', which kept the gene with largest fold changes. 'first' kept the first gene. 'random' chosed gene random. 'var' kept the gene with largest variation. 'abs' kept the gene with largest absolute value
 ##' @param max_dist The expression changes that represented by the distance from the bottom to the top of gene rectangle, valid when type='lines'. This param is used to ensure the dynamic changes of lines in different gene polygon represent equal variation. It would be calculated from the maximum changes of genes in this pathway by default. If max_dist=NA, then the lines would be plotted from top to bottom in each gene rectangle
+##' @param lwd The line width when type='lines' 
 ##' @inheritParams parse_XMLfile
 ##' @export
 ##' @return a matrix containing genes maped in this pathway, and their names, expressions 
 ##' @examples XML2database<-parse_XMLfile(pathway_id="04110",specis="hsa",database_dir=system.file("extdata",package="KEGGprofile"))
 ##' data(pro_pho_expr)
 ##' temp<-plot_profile(pro_pho_expr,pathway_name="hsa04110",KEGG_database=XML2database,line_col=c("brown1","seagreen3"),groups=c(rep("Proteome ",6),rep("Phosphoproteome ",6)),magnify=1.2,database_dir=system.file("extdata",package="KEGGprofile"),max_dist=5)
-plot_profile<-function(gene_expr,pathway_name,KEGG_database,groups,bg_col="white",text_col="black",line_col,border_col="grey",text_cex=0.25,magnify=1,type=c('lines','bg'),pathway_min=5,genes_kept=c('foldchange','first','random','var','abs'),specis='hsa',database_dir=getwd(),max_dist) {
+plot_profile<-function(gene_expr,pathway_name,KEGG_database,groups,bg_col="white",text_col="black",line_col,border_col="grey",text_cex=0.25,magnify=1,type=c('lines','bg'),pathway_min=5,genes_kept=c('foldchange','first','random','var','abs'),specis='hsa',database_dir=getwd(),max_dist,lwd=1.2) {
 	type <- if (missing(type)) 
 				"lines" else match.arg(type)
 	genes_kept <- if (missing(genes_kept)) 
@@ -145,7 +146,10 @@ plot_profile<-function(gene_expr,pathway_name,KEGG_database,groups,bg_col="white
 	
 	#the number of annotated genes
 	genes<-intersect(KEGG_database[,1],row.names(gene_expr))
-	if (length(genes)<pathway_min) {return()}
+	if (length(genes)<pathway_min) {
+		print (paste("The genes mapped in pathway ",pathway_name," were less than ",pathway_min,", skip this pathway.",sep=""))
+		return()
+	}
 	
 	#plot KEGG pic
 	require(png)
@@ -201,7 +205,7 @@ plot_profile<-function(gene_expr,pathway_name,KEGG_database,groups,bg_col="white
 				if (y_ratio>1) {y_ratio<-1}
 			}
 			old_par <- par(no.readonly = TRUE)
-			subplot(matplot(ChosedGeneProfile,main="",type="l",xlab="",ylab="",xaxt="n",yaxt="n",bty="n",col=line_col,lty=1,lwd=1.2),c(ChosedGene[,2]-ChosedGene[,4]/2*magnify+err_x_location,ChosedGene[,2]+ChosedGene[,4]*magnify/2+err_x_location),c(height-ChosedGene[,3]-ChosedGene[,5]*y_ratio/2*magnify-err_y_location,height-ChosedGene[,3]+ChosedGene[,5]*y_ratio/2*magnify-err_y_location))
+			subplot(matplot(ChosedGeneProfile,main="",type="l",xlab="",ylab="",xaxt="n",yaxt="n",bty="n",col=line_col,lty=1,lwd=lwd),c(ChosedGene[,2]-ChosedGene[,4]/2*magnify+err_x_location,ChosedGene[,2]+ChosedGene[,4]*magnify/2+err_x_location),c(height-ChosedGene[,3]-ChosedGene[,5]*y_ratio/2*magnify-err_y_location,height-ChosedGene[,3]+ChosedGene[,5]*y_ratio/2*magnify-err_y_location))
 			par(old_par)
 		}
 		plot_polygon(ChosedGene=ChosedGene,col=as.data.frame(NULL),i=1,i_max=1,height=height,err_x_location=err_x_location,err_y_location=err_y_location,magnify=magnify,border=border_col[as.character(ChosedGene[,1]),1],lty=1,lwd=0.5)
@@ -217,6 +221,7 @@ plot_profile<-function(gene_expr,pathway_name,KEGG_database,groups,bg_col="white
 		}
 	}
 	dev.off()
+	print (paste("The figure was generated in ",getwd(),"/",pathway_name,"_profile_",type,".png",sep=""))
 	colnames(return_expr)<-c("Gene","Name",colnames(gene_expr))
 	return(unique(return_expr))
 }
